--- a/map_with_button.html
+++ b/map_with_button.html
@@ -16,6 +16,8 @@
   <style>
     body, html { margin:0; padding:0; height:100%; font-family:'Roboto',sans-serif; }
     #map { position:absolute; top:0; bottom:0; width:100%; }
+
+    /* Home/Clear button */
     #homeButton {
       position:absolute; top:10px; left:10px; z-index:2;
       pointer-events:auto; padding:10px 20px; font-size:16px; font-weight:700;
@@ -27,7 +29,7 @@
 </head>
 <body>
 
-  <!-- Home/Clear button -->
+  <!-- Home/Clear -->
   <button id="homeButton" title="Clear & Home">
     <span class="material-icons">home</span>
   </button>
@@ -58,7 +60,6 @@
       maxBounds: bounds
     });
 
-    // Compute full bounds of a feature
     function getFeatureBounds(feature) {
       const geom = feature.geometry;
       const pts = geom.type === 'MultiPolygon'
@@ -70,32 +71,30 @@
       );
     }
 
-    // Select & highlight a feature
     function selectFeature(feature) {
-      // Zoom
+      // zoom to full shape
       const bb = getFeatureBounds(feature);
       map.fitBounds(bb, { padding: 40, duration: 800 });
 
-      // Fade others
+      // fade others
       map.setFilter('fade-layer',
         ['!=', ['get', geojsonNameField], feature.properties[geojsonNameField]]
       );
       map.setLayoutProperty('fade-layer','visibility','visible');
 
-      // Highlight selected
+      // highlight
       map.getSource('highlight-town').setData({
         type: 'FeatureCollection',
         features: [feature]
       });
 
-      // Notify parent
+      // notify parent
       window.parent.postMessage({
         type: 'town-selected',
         properties: feature.properties
       }, '*');
     }
 
-    // Clear highlight/fade & reset view
     function clearSelection() {
       map.setLayoutProperty('fade-layer','visibility','none');
       map.getSource('highlight-town').setData({ type:'FeatureCollection', features:[] });
@@ -104,13 +103,13 @@
     }
 
     map.on('load', () => {
-      // 1) Fetch full GeoJSON
+      // load full GeoJSON
       fetch(geojsonURL)
         .then(r => r.ok ? r.json() : Promise.reject(r.status))
         .then(data => municipalitiesData = data.features)
         .catch(err => console.error('GeoJSON load failed:', err));
 
-      // 2) Fade layer (hidden default)
+      // fade layer
       map.addSource('municipalities-full', { type:'geojson', data: geojsonURL });
       map.addLayer({
         id: 'fade-layer',
@@ -120,11 +119,8 @@
         layout: { visibility: 'none' }
       });
 
-      // 3) Highlight source & layers
-      map.addSource('highlight-town', {
-        type:'geojson',
-        data: { type:'FeatureCollection', features: [] }
-      });
+      // highlight layers
+      map.addSource('highlight-town', { type:'geojson', data: { type:'FeatureCollection', features:[] } });
       map.addLayer({
         id: 'highlight-fill',
         type: 'fill',
@@ -138,21 +134,21 @@
         paint: { 'line-color':'#FF9800','line-width':2 }
       });
 
-      // Home/Clear button
+      // home/clear button
       document.getElementById('homeButton').onclick = clearSelection;
 
-      // Click on vector‑tile layer
+      // click on vector tile
       map.on('click', vectorLayerId, e => {
         if (!municipalitiesData.length) return;
-        const clickedName = e.features[0].properties[tileNameField];
+        const clicked = e.features[0].properties[tileNameField];
         const match = municipalitiesData.find(
-          f => f.properties[geojsonNameField]?.toLowerCase() === clickedName.toLowerCase()
+          f => f.properties[geojsonNameField]?.toLowerCase() === clicked.toLowerCase()
         );
         if (match) selectFeature(match);
       });
     });
 
-    // Listen for search/clear messages
+    // listen for search/clear
     window.addEventListener('message', e => {
       const msg = e.data;
       if (!municipalitiesData.length) return;
