--- a/map_with_button.html
+++ b/map_with_button.html
@@ -18,7 +18,7 @@
     #map { position:absolute; top:0; bottom:0; width:100%; }
     #homeButton {
       position:absolute; top:10px; left:10px; z-index:2;
-      pointer-events:auto; padding:10px 20px; font-size:16px; font-weight:700;
+      padding:10px 20px; font-size:16px; font-weight:700;
       background:rgba(255,255,255,0.9); color:#005e95; border:none; border-radius:8px;
       cursor:pointer; box-shadow:0 2px 6px rgba(0,0,0,0.3); backdrop-filter:blur(4px);
     }
@@ -27,7 +27,6 @@
 </head>
 <body>
 
-  <!-- Home/Clear button -->
   <button id="homeButton" title="Clear & Home">
     <span class="material-icons">home</span>
   </button>
@@ -37,11 +36,11 @@
   <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoiMjBhaG9lcyIsImEiOiJjbWFwazQxbDgwaXMzMmxwbzJmNmhidm0yIn0.NileAvzC_m2asZI3tLIqUw';
 
-    const defaultCenter    = [-71.245, 42.254],
+    const defaultCenter    = [-71.245,42.254],
           defaultZoom      = 8,
           vectorLayerId    = 'municipalitiesbycommunitytype-c8ks3h copy',
-          tileNameField    = 'Municipali',
-          geojsonNameField = 'Municipality',
+          tileField        = 'Municipali',
+          geojsonField     = 'Municipality',
           bounds           = [[-72.5,41.5],[-69.5,43.0]],
           geojsonURL       = './MunicipalitiesByCommunityType.geojson';
 
@@ -50,36 +49,29 @@
     const map = new mapboxgl.Map({
       container:'map',
       style:'mapbox://styles/20ahoes/cmb6rnzqp00rs01sddsqq9xtx',
-      center:defaultCenter,
-      zoom:defaultZoom,
-      minZoom:defaultZoom,
-      maxZoom:22,
-      maxBounds:bounds
+      center:defaultCenter, zoom:defaultZoom,
+      minZoom:defaultZoom, maxZoom:22, maxBounds:bounds
     });
 
     function getFeatureBounds(feature) {
       const geom = feature.geometry;
-      const pts = geom.type==='MultiPolygon'
+      const pts  = geom.type==='MultiPolygon'
         ? geom.coordinates.flat(2)
         : geom.coordinates[0];
-      return pts.reduce(
-        (b,c) => b.extend(c),
-        new mapboxgl.LngLatBounds()
-      );
+      return pts.reduce((b,c)=>b.extend(c), new mapboxgl.LngLatBounds());
     }
 
     function selectFeature(feature) {
       const bb = getFeatureBounds(feature);
-      map.fitBounds(bb, { padding:40, duration:800 });
+      map.fitBounds(bb,{padding:40,duration:800});
 
       map.setFilter('fade-layer',
-        ['!=', ['get', geojsonNameField], feature.properties[geojsonNameField]]
+        ['!=',['get',geojsonField],feature.properties[geojsonField]]
       );
       map.setLayoutProperty('fade-layer','visibility','visible');
 
       map.getSource('highlight-town').setData({
-        type:'FeatureCollection',
-        features:[feature]
+        type:'FeatureCollection', features:[feature]
       });
 
       window.parent.postMessage({
@@ -95,52 +87,51 @@
       window.parent.postMessage({ type:'clear-town' }, '*');
     }
 
-    map.on('load', () => {
+    map.on('load',()=>{
       fetch(geojsonURL)
-        .then(r => r.ok? r.json(): Promise.reject(r.status))
-        .then(data => municipalitiesData = data.features)
-        .catch(err => console.error('GeoJSON load failed:', err));
+        .then(r=>r.ok? r.json():Promise.reject(r.status))
+        .then(data=> municipalitiesData = data.features)
+        .catch(err=>console.error('GeoJSON load failed:',err));
 
-      map.addSource('municipalities-full',{ type:'geojson', data:geojsonURL });
+      map.addSource('municipalities-full',{type:'geojson',data:geojsonURL});
       map.addLayer({
         id:'fade-layer', type:'fill', source:'municipalities-full',
-        paint:{ 'fill-color':'#888','fill-opacity':0.5 },
-        layout:{ visibility:'none' }
+        paint:{'fill-color':'#888','fill-opacity':0.5},
+        layout:{visibility:'none'}
       });
 
-      map.addSource('highlight-town',{ type:'geojson', data:{type:'FeatureCollection',features:[]} });
+      map.addSource('highlight-town',{type:'geojson',data:{type:'FeatureCollection',features:[] }});
       map.addLayer({
         id:'highlight-fill', type:'fill', source:'highlight-town',
-        paint:{ 'fill-color':'#FFEB3B','fill-opacity':0.8 }
+        paint:{'fill-color':'#FFEB3B','fill-opacity':0.8}
       });
       map.addLayer({
         id:'highlight-line', type:'line', source:'highlight-town',
-        paint:{ 'line-color':'#FF9800','line-width':2 }
+        paint:{'line-color':'#FF9800','line-width':2}
       });
 
       document.getElementById('homeButton').onclick = clearSelection;
 
-      map.on('click', vectorLayerId, e => {
-        if (!municipalitiesData.length) return;
-        const clicked = e.features[0].properties[tileNameField];
+      map.on('click', vectorLayerId, e=>{
+        if(!municipalitiesData.length) return;
+        const name = e.features[0].properties[tileField];
         const match = municipalitiesData.find(
-          f=> f.properties[geojsonNameField]?.toLowerCase() === clicked.toLowerCase()
+          f=>f.properties[geojsonField]?.toLowerCase()===name.toLowerCase()
         );
-        if (match) selectFeature(match);
+        if(match) selectFeature(match);
       });
     });
 
-    window.addEventListener('message', e => {
-      const msg = e.data;
-      if (!municipalitiesData.length) return;
-      if (msg?.type==='search-town') {
-        const term = msg.name.trim().toLowerCase();
+    window.addEventListener('message', e=>{
+      const msg=e.data;
+      if(!municipalitiesData.length) return;
+      if(msg?.type==='search-town'){
+        const term=msg.name.trim().toLowerCase();
         const match = municipalitiesData.find(
-          f=> f.properties[geojsonNameField]?.toLowerCase()===term
+          f=>f.properties[geojsonField]?.toLowerCase()===term
         );
-        if (match) selectFeature(match);
-      }
-      else if (msg?.type==='clear-town') {
+        if(match) selectFeature(match);
+      } else if(msg?.type==='clear-town'){
         clearSelection();
       }
     });
